UI: Fix state icons alignment

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -596,7 +596,5 @@ td.number, th.number {
     color: #2A3744 !important;
 }
 .state-icon {
-    vertical-align: baseline;
-    max-width: 14px;
-    max-height: 14px;
+    vertical-align: middle;
 }
